add bd auth models

--- a/package.json
+++ b/package.json
@@ -15,20 +15,38 @@
     "build": "npm run build -w back && npm run build -w front",
     "build:back": "npm run build -w back",
     "build:front": "npm run build -w front",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint front/src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --quiet",
+    "lint:quiet": "eslint front/src --quiet",
+    "lint:fix": "eslint front/src --fix",
     "format": "prettier ./**/*.{html,ts,tsx,json,xml,md,scss}",
     "format:quiet": "npm run format -- --list-different",
-    "format:fix": "npm run format -- --write"
+    "format:fix": "npm run format -- --write",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ML",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt-nodejs": "^0.0.31",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.8",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   }
 }
