--- a/back/package.json
+++ b/back/package.json
@@ -17,10 +17,13 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "express-oauth-server": "^2.0.0",
     "helmet": "^7.1.0",
     "inserturlparams": "^1.1.2",
     "jet-logger": "^1.3.1",
@@ -30,6 +33,10 @@
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.9.1",
+    "sequelize": "^6.37.3",
     "ts-command-line-args": "^2.5.1"
   },
   "devDependencies": {
