--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,38 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# Dependencies
+node_modules
+.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-/dist
-
-# misc
-.DS_Store
+# Local env files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Testing
+coverage
+
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.idea
-.vite
-.vscode
-sonar-scanner.properties
-.scannerwork/scanner-report/analysis.log
-.scannerwork/.sonar_lock
-.scannerwork/report-task.txt
-stats.html
-.parcel-cache
-front/.next
+# Misc
+.DS_Store
+*.pem
