--- a/package.json
+++ b/package.json
@@ -1,52 +1,23 @@
 {
   "name": "employees-package",
-  "version": "1.0.0",
-  "description": "next-app + express",
-  "main": "index.js",
-  "workspaces": [
-    "back",
-    "front"
-  ],
+  "private": true,
   "scripts": {
-    "start": "npm run start -w back && npm run start -w front",
-    "start:dev": "concurrently --names 'BACK,FRONT' -c 'green,blue' 'npm:start:dev -w back' 'npm:start:dev -w front'",
-    "start:back": "npm run start:dev -w back",
-    "start:front": "npm run start:dev -w front",
-    "build": "npm run build -w back && npm run build -w front",
-    "build:back": "npm run build -w back",
-    "build:front": "npm run build -w front",
-    "lint": "eslint front/src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --quiet",
-    "lint:quiet": "eslint front/src --quiet",
-    "lint:fix": "eslint front/src --fix",
-    "format": "prettier ./**/*.{html,ts,tsx,json,xml,md,scss}",
-    "format:quiet": "npm run format -- --list-different",
-    "format:fix": "npm run format -- --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
-  "author": "ML",
-  "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt-nodejs": "^0.0.31",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "^14.2.5",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.8",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.3"
+    "prettier": "^3.2.5",
+    "turbo": "^2.0.7",
+    "typescript": "^5.4.5"
   },
-  "dependencies": {
-    "reflect-metadata": "^0.2.2",
-    "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "npm@10.8.1",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
