--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -15,13 +15,18 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.11",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4",
+    "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0"
   }
