--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -24,9 +24,13 @@
     "winston": "^3.13.1"
   },
   "devDependencies": {
+    "@repo/eslint-config": "*",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
+    "eslint": "^9.7.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-security": "^3.0.1",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0"
   }
