--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -12,26 +12,28 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
     "winston": "^3.13.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^20.14.11",
     "eslint": "^9.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^3.0.1",
     "rimraf": "^6.0.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.3"
   }
 }
