add auth server

--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc --p tsconfig.json",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ML",
@@ -17,8 +14,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
+    "express-session": "^1.18.0",
+    "grant": "^5.4.22",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.12.0",
     "ts-node": "^10.9.2",
+    "uuid": "^10.0.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
@@ -27,8 +31,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.11",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^3.0.1",
