--- a/apps/back/.eslintrc.json
+++ b/apps/back/.eslintrc.json
@@ -1,41 +1,70 @@
-{
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:node/recommended"
-  ],
-  "parserOptions": {
-    "project": "./back/tsconfig.json"
-  },
-  "rules": {
-    "@typescript-eslint/explicit-member-accessibility": "warn",
-    "@typescript-eslint/no-misused-promises": 0,
-    "@typescript-eslint/no-floating-promises": 0,
-    "max-len": [
-      "warn",
-      {
-        "code": 80
-      }
-    ],
-    "comma-dangle": ["warn", "always-multiline"],
-    "no-console": 1,
-    "no-extra-boolean-cast": 0,
-    "semi": 1,
-    "indent": ["warn", 2],
-    "quotes": ["warn", "single"],
-    "node/no-process-env": 1,
-    "node/no-unsupported-features/es-syntax": ["error", { "ignores": ["modules"] }],
-    "node/no-missing-import": 0,
-    "node/no-unpublished-import": 0
-  },
-  "settings": {
-    "node": {
-      "include": ["src/"],
-      "resolvePaths": ["src"],
-      "tryExtensions": [".js", ".json", ".node", ".ts"]
-    }
-  }
-}
+// {
+//   "parser": "@typescript-eslint/parser",
+//   "plugins": ["@typescript-eslint"],
+//   "extends": [
+//     "eslint:recommended",
+//     "plugin:@typescript-eslint/recommended",
+//     "plugin:@typescript-eslint/recommended-requiring-type-checking",
+//     "plugin:node/recommended"
+//   ],
+//   "parserOptions": {
+//     "project": "./back/tsconfig.json"
+//   },
+//   "rules": {
+//     "@typescript-eslint/explicit-member-accessibility": "warn",
+//     "@typescript-eslint/no-misused-promises": 0,
+//     "@typescript-eslint/no-floating-promises": 0,
+//     "max-len": [
+//       "warn",
+//       {
+//         "code": 80
+//       }
+//     ],
+//     "comma-dangle": ["warn", "always-multiline"],
+//     "no-console": 1,
+//     "no-extra-boolean-cast": 0,
+//     "semi": 1,
+//     "indent": ["warn", 2],
+//     "quotes": ["warn", "single"],
+//     "node/no-process-env": 1,
+//     "node/no-unsupported-features/es-syntax": ["error", { "ignores": ["modules"] }],
+//     "node/no-missing-import": 0,
+//     "node/no-unpublished-import": 0,
+// '@typescript-eslint/no-unsafe-member-access': 'warn',
+// '@typescript-eslint/no-unsafe-assignment': 'warn',
+// '@typescript-eslint/no-explicit-any': 'warn',
+// '@typescript-eslint/no-floating-promises': 'warn',
+// '@typescript-eslint/explicit-module-boundary-types': 'warn',
+// '@typescript-eslint/ban-ts-comment': 'warn',
+// '@typescript-eslint/unbound-method': 'warn',
+// '@angular-eslint/no-empty-lifecycle-method': 'warn',
+// '@angular-eslint/no-forward-ref': 'warn',
+// '@angular-eslint/no-input-rename': 'warn',
+// '@angular-eslint/no-output-native': 'warn',
+// '@angular-eslint/no-output-rename': 'warn',
+// '@angular-eslint/prefer-on-push-component-change-detection': 'warn',
+// '@angular-eslint/prefer-output-readonly': 'warn',
+// '@angular-eslint/relative-url-prefix': 'warn',
+// '@angular-eslint/use-component-selector': 'warn',
+// '@angular-eslint/use-component-view-encapsulation': 'warn',
+// '@angular-eslint/use-injectable-provided-in': 'off',
+// '@angular-eslint/use-lifecycle-interface': 'warn',
+// '@typescript-eslint/member-ordering': 'warn',
+// '@typescript-eslint/no-empty-function': 'warn',
+// '@typescript-eslint/no-unnecessary-type-assertion': 'warn',
+// '@typescript-eslint/no-unsafe-argument': 'warn',
+// '@typescript-eslint/no-unsafe-call': 'warn',
+// '@typescript-eslint/no-unsafe-return': 'warn',
+// 'rxjs/no-implicit-any-catch': 'warn',
+// 'rxjs/no-nested-subscribe': 'warn',
+// 'rxjs/throw-error': 'warn',
+// 'rxjs/no-unsafe-subject-next': 'warn'
+//   },
+//   "settings": {
+//     "node": {
+//       "include": ["src/"],
+//       "resolvePaths": ["src"],
+//       "tryExtensions": [".js", ".json", ".node", ".ts"]
+//     }
+//   }
+// }
